--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,6 +3,8 @@
 @use "themes";
 @use "properties" as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');
+
 :root {
   @include css-properties(colors.$primary, c);
   @include css-properties(colors.$secondary, c);
@@ -10,6 +12,10 @@
 }
 
 body {
+  font-family: Spartan, sans-serif;
+  font-size: 0.75rem;
+  font-weight: 500;
+
   &.theme--dark {
     @include css-properties(themes.$dark, t);
   }
@@ -17,4 +23,35 @@ body {
   &.theme--light {
     @include css-properties(themes.$light, t);
   }
+}
+
+h1, h2, h3 {
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 2.25rem;
+  letter-spacing: -1px;
+}
+
+h2 {
+  font-size: 1.25rem;
+  line-height: 1.375rem;
+  letter-spacing: -0.63px;
+}
+
+h3 {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: -0.8;
+}
+
+h4 {
+  font-size: 0.75rem;
+}
+
+p, span, h4 {
+  line-height: 1rem;
+  letter-spacing: -0.25px;
 }
