--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -3,3 +3,15 @@
     @content;
   }
 }
+
+@mixin button-reset {
+  padding: 0;
+  
+  border: none;
+  outline: none;
+
+  color: inherit;
+  background: none;
+
+  cursor: pointer;
+}
